<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_step"
            android:title="@string/menu_steps" />
        <item
            android:id="@+id/nav_hour"
            android:icon="@drawable/ic_menu_bar_chart"
            android:title="@string/menu_hour" />

        <item
            android:id="@+id/nav_day"
            android:icon="@drawable/ic_weekly_chart"
            android:title="@string/menu_day" />

        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_menu_person"
            android:title="@string/menu_profile" />
    </group>
</menu>



